# SDLPlayer

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  vcpkg.json
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: design.md  support-matrix.md
src/: main.cpp
src/player/: Player.cpp  Player.h
tests/player/: PlayerTests.cpp
